# spark-marimo-quickstart

./: .gitignore  .mise.toml  .prettierignore  CLAUDE.md  README.md  SPARK_CONNECT_BLOG_POST_PLAN.md  docker-compose.yml  mise.toml  pyproject.toml
data/: download.sh
src/spark_marimo_quickstart/: __init__.py  spark_feature_eng.py
